WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
50283
[GTK] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
https://bugs.webkit.org/show_bug.cgi?id=50283
Summary
[GTK] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
Martin Robinson
Reported
2010-11-30 15:30:01 PST
Shadow offsets should not be affected by canvas scale. This is a companion fix to
https://bugs.webkit.org/show_bug.cgi?id=50141
.
Attachments
Patch for this issue
(7.41 KB, patch)
2010-11-30 17:02 PST
,
Martin Robinson
xan.lopez
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2010-11-30 17:02:39 PST
Created
attachment 75231
[details]
Patch for this issue
Xan Lopez
Comment 2
2010-11-30 17:09:06 PST
Comment on
attachment 75231
[details]
Patch for this issue r=me
Martin Robinson
Comment 3
2010-11-30 17:36:33 PST
Committed
r72987
: <
http://trac.webkit.org/changeset/72987
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug