2010-11-30  Martin Robinson  <mrobinson@igalia.com>

Reviewed by Xan Lopez.

        [GTK] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50283

        Add platform exceptions for these tests. While this change fixes most issues
        with them there are still bugs with our shadow code which prevents a total
        pass.

        * platform/gtk/fast/canvas/canvas-scale-fillPath-shadow-expected.txt: Added.
        * platform/gtk/fast/canvas/canvas-scale-fillRect-shadow-expected.txt: Added.
2010-11-30  Martin Robinson  <mrobinson@igalia.com>

        Reviewed by Xan Lopez.

        [GTK] fillRect shadow has incorrect behavior when using ctx.scale(x,y)
        https://bugs.webkit.org/show_bug.cgi?id=50283

        Adjust the mask rectangle for Cairo shadows, so that the origin
        is not affected by the scale of the transformation matrix.

        * platform/graphics/ContextShadow.h: Make this Qt-only member global.
        * platform/graphics/cairo/ContextShadowCairo.cpp:
        (WebCore::ContextShadow::beginShadowLayer): Save the original layer area.
        (WebCore::ContextShadow::endShadowLayer): If the target context has a scale
        transform, make sure not to scale the blur distance when blitting the shadow.

Canonical link: https://commits.webkit.org/63440@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72987 268f45cc-cd09-0410-ab3c-d52691b4dbfc